# multicopter

./: .gitignore  Main.hs  Setup.hs  Slice.hs  SliceTest.hs  Utils.hs  World.hs  cabal.config  compile.sh  main.hs  multicopter.cabal  stuff-to-try.txt
coffee/: game.coffee
haskell/: Main.hs  SafeStaticDataFileMiddleware.hs  Slice.hs  World.hs
src/coffee/: game.coffee
src/fay/: Main.hs  Websocket.hs
src/haskell/: Conversion.hs  EitherUtils.hs  FileEmbedMiddleware.hs  Game.hs  Geometry.hs  Logging.hs  Main.hs  Player.hs  QQStr.hs  SafeStaticDataFileMiddleware.hs  ServerState.hs  ToMarkupInstances.hs  TokenGenerator.hs  Views.hs  WebM.hs  World.hs  qq_test.hs
src/haskell/Game/: Constants.hs  Game.hs  Geometry.hs  Heli.hs  Slice.hs  Types.hs  World.hs
src/haskell/Server/: FileEmbedMiddleware.hs  GameRepository.hs  Player.hs  PlayerRepository.hs  Routing.hs  SafeStaticDataFileMiddleware.hs  ScottyApp.hs  ServerState.hs  StaticFileMiddleware.hs  ToMarkupInstances.hs  TokenGenerator.hs  Types.hs  View.hs  Views.hs  WebM.hs  WebSocketsApp.hs
src/haskell/cabal-dev/: cabal.config
src/shared/Game/: Constants.hs
src/static/: game.js  index.html  style.css
static/: game.js  index.html
test/: TestMain.hs  TokenGeneratorTest.hs
test/Server/: WebSocketsAppTest.hs
