name:           multicopter
version:        0.0.1
cabal-version:  >= 1.6
build-type:     Simple

test-suite multicopter-tests
  type:             exitcode-stdio-1.0
  main-is:          TestMain.hs
  hs-source-dirs:   test, src/haskell
  ghc-options:      -threaded -Wall
  build-depends:    base,
                    HUnit,
                    QuickCheck,
                    test-framework,
                    test-framework-hunit,
                    test-framework-quickcheck2
  extensions:       GeneralizedNewtypeDeriving,
                    OverloadedStrings,
                    DeriveDataTypeable,
                    TemplateHaskell,
                    TypeSynonymInstances,
                    FlexibleInstances

executable multicopter
  hs-source-dirs:   src/haskell
  main-is:          Main.hs
  ghc-options:      -threaded -Wall
  build-depends:    base,
                    data-default,
                    random,
                    bytestring,
                    containers,
                    MonadRandom,
                    mtl,
                    stm,
                    transformers,
                    text,
                    text-format,
                    filepath,
                    conduit,
                    blaze-builder,
                    blaze-html,
                    directory,
                    http-types,
                    scotty >= 0.6.0 && < 0.7,
                    aeson,
                    wai,
                    wai-extra,
                    wai-middleware-static,
                    cookie,
                    websockets,
                    file-embed,
                    ixset
  extensions:       GeneralizedNewtypeDeriving,
                    OverloadedStrings,
                    DeriveDataTypeable,
                    TemplateHaskell,
                    TypeSynonymInstances,
                    FlexibleInstances
