name:           multicopter
version:        0.0.2
cabal-version:  >= 1.6
build-type:     Simple

test-suite multicopter-tests
  type:             exitcode-stdio-1.0
  main-is:          TestMain.hs
  hs-source-dirs:   test src/haskell src/shared
  ghc-options:      -threaded -Wall
  build-depends:    base,
                    HUnit,
                    QuickCheck,
                    test-framework,
                    test-framework-hunit,
                    test-framework-quickcheck2
  extensions:       GeneralizedNewtypeDeriving,
                    OverloadedStrings,
                    DeriveDataTypeable,
                    TemplateHaskell,
                    TypeSynonymInstances,
                    FlexibleInstances

executable multicopter
  hs-source-dirs:   src/haskell src/shared
  main-is:          Main.hs
  ghc-options:      -threaded -Wall
  build-depends:    base,
                    data-default,
                    random,
                    bytestring,
                    MonadRandom,
                    stm,
                    transformers,
                    containers,
                    mtl,
                    text,
                    text-format,
                    blaze-builder,
                    blaze-html,
                    http-types,
                    scotty,
                    fay,
                    fay-jquery,
                    aeson,
                    wai,
                    wai-app-static,
                    wai-websockets,
                    warp,
                    cookie,
                    websockets,
                    ixset,
                    filepath,
                    directory,
                    time,
                    old-locale,
                    language-haskell-extract

  extensions:       GeneralizedNewtypeDeriving,
                    OverloadedStrings,
                    DeriveDataTypeable,
                    TemplateHaskell,
                    TypeSynonymInstances,
                    FlexibleInstances
